# ArboOCR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
cli/: arboocr_demo.cpp
docs/: jetson-verification.md
examples/: CMakeLists.txt  README.md  basic_recognize.cpp  custom_pipeline.cpp
include/arboOCR/: classifier.hpp  engine.hpp  ocr_utils.hpp  recognizer.hpp  types.hpp
src/arboOCR/: classifier.cpp  detector.cpp  ocr_utils.cpp  ort_provider_utils.cpp  ort_provider_utils.hpp  recognizer.cpp
tests/: test_classifier.cpp  test_ocr_utils.cpp  test_recognizer.cpp
